--- a/contact.html
+++ b/contact.html
@@ -58,7 +58,7 @@
                 <h4><small>How to contact us?</small></h4>
                 <hr>
                 <h2>Send us an email</h2>
-                <p>If you have any queries, please send an email to vishnu.code.rag@gmail.com</p>
+                <p>If you have any queries, please send an email to nickasterberry@gmail.com</p>
                 <h2>Stay home! Stay safe!</h2>
             </div>
         </div>
